homepage: lighter link design for sponsors

--- a/prologin/homepage/templates/homepage/sponsors.html
+++ b/prologin/homepage/templates/homepage/sponsors.html
@@ -19,7 +19,7 @@
 <br/>
 
 <p>
-  <a href="{% url 'sponsors:index' %}" class="btn btn-default btn-block">
-    <i class="fa fa-info"></i> {% trans "More details" %}
+  <a href="{% url 'sponsors:index' %}" class="btn btn-link btn-block">
+    <i class="fa fa-handshake-o"></i> {% trans "All about our sponsors" %} →
   </a>
 </p>
