--- a/prologin/prologin/static/css/prologin.css
+++ b/prologin/prologin/static/css/prologin.css
@@ -1234,3 +1234,18 @@ table.table-noborder > tbody > tr > td {
 table.table-align-middle > tbody > tr > td {
   vertical-align: middle;
 }
+
+/*
+ * Sponsors
+ */
+
+.sponsor-logo {
+    display: block;
+    width: 100%;
+    text-align : center;
+}
+
+.sponsor-logo > img {
+    max-width: 100%;
+    max-height: 10em;
+}
