sponsor: add sponsor view (#196)

--- a/prologin/prologin/templates/prologin/main-footer.html
+++ b/prologin/prologin/templates/prologin/main-footer.html
@@ -8,8 +8,8 @@
       <li><a href="{% url 'pages:about-organization' %}"><i class="fa fa-cube fa-centered"></i> {% trans "The organization" %}</a></li>
       <li><a href="{% url 'pages:about-contribute' %}"><i class="fa fa-hand-paper-o fa-centered"></i> {% trans "Contribute" %}</a></li>
       <li><a href="{% url 'pages:about-organization' %}#contact"><i class="fa fa-envelope fa-centered"></i> {% trans "Contact us" %}</a></li>
-	  <li><a href="{% url 'pages:about-contest-rules' %}"><i class="fa fa-gavel
-				  fa-centered"></i> {% trans "Contest rules" %}</a></li>
+      <li><a href="{% url 'pages:about-contest-rules' %}"><i class="fa fa-gavel fa-centered"></i> {% trans "Contest rules" %}</a></li>
+      <li><a href="{% url 'sponsors:index' %}"><i class="fa fa-heart fa-centered"></i> {% trans "Sponsors" %}</a></li>
       <li><a href="{% get_setting 'PROLOGIN_BUG_TRACKER_URL' %}"><i class="fa fa-bug"></i> {% trans "Report a bug on the website" %}</a></li>
 
     </ul>
