document: add droit image for orga

--- a/prologin/documents/templates/documents/index.html
+++ b/prologin/documents/templates/documents/index.html
@@ -111,6 +111,9 @@
               <a href="{% url 'documents:final:portrayal-agreement' year %}" class="btn btn-default btn-xs">
                 <i class="fa fa-camera"></i> {% trans "Portrayal agreement" %}
               </a>
+              <a href="{% url 'documents:final:portrayal-agreement-orga' year %}" class="btn btn-default btn-xs">
+                <i class="fa fa-camera"></i> {% trans "Portrayal agreement Orga" %}
+              </a>
               <a href="{% url 'documents:final:participation-authorization' year %}" class="btn btn-default btn-xs">
                 <i class="fa fa-child"></i> {% trans "Participation Authorization" %}
               </a>
