apply licence to non-python files

--- a/prologin/homepage/static/css/homepage.css
+++ b/prologin/homepage/static/css/homepage.css
@@ -1,3 +1,7 @@
+/* Copyright (C) <2015> Association Prologin <association@prologin.org>
+ * SPDX-License-Identifier: GPL-3.0+
+ */
+
 .home-jumbo {
   margin-top: -20px;
   background: #35479a;
