--- a/prologin/archives/static/css/archives.css
+++ b/prologin/archives/static/css/archives.css
@@ -1,3 +1,7 @@
+/* Copyright (C) <2015> Association Prologin <association@prologin.org>
+ * SPDX-License-Identifier: GPL-3.0+
+ */
+
 .archive-container {
   display: flex;
   flex-wrap: wrap;
