--- a/prologin/forum/static/css/forum.css
+++ b/prologin/forum/static/css/forum.css
@@ -1,3 +1,7 @@
+/* Copyright (C) <2015> Association Prologin <association@prologin.org>
+ * SPDX-License-Identifier: GPL-3.0+
+ */
+
 /* Forum style */
 
 .post-content .codehilitetable {
