--- a/prologin/semifinal/static/css/semifinal/monitoring.css
+++ b/prologin/semifinal/static/css/semifinal/monitoring.css
@@ -1,3 +1,7 @@
+/* Copyright (C) <2016> Association Prologin <association@prologin.org>
+ * SPDX-License-Identifier: GPL-3.0+
+ */
+
 .table > tbody > tr:nth-of-type(4n+1), .table > tbody > tr:nth-of-type(4n+2) {
   background-color: #f9f9f9;
 }
