--- a/prologin/semifinal/static/css/semifinal/scoreboard.css
+++ b/prologin/semifinal/static/css/semifinal/scoreboard.css
@@ -1,3 +1,6 @@
+/* Copyright (C) <2016> Association Prologin <association@prologin.org>
+ * SPDX-License-Identifier: GPL-3.0+
+ */
 
 #scoreboard-wrap:fullscreen .hide-fs {
   display: none;
