--- a/prologin/prologin/templates/prologin/main-menu.html
+++ b/prologin/prologin/templates/prologin/main-menu.html
@@ -48,10 +48,10 @@
   </li>
   {% else %}
   <li class="{% active 'users:login' %}">
-    <a href="{% url 'users:login' %}?next={{ request.get_full_path }}">{% trans "Sign in" %}</a>
+    <a href="{% url 'users:login' %}?{% querystring request next=request.path %}">{% trans "Sign in" %}</a>
   </li>
   <li class="{% active 'users:register' %}">
-    <a href="{% url 'users:register' %}?next={{ request.get_full_path }}">{% trans "Register" %}</a>
+    <a href="{% url 'users:register' %}?{% querystring request next=request.path %}">{% trans "Register" %}</a>
   </li>
   {% endif %}
 </ul>
