centers: zoom on selected center

--- a/prologin/centers/templates/centers/map.html
+++ b/prologin/centers/templates/centers/map.html
@@ -148,6 +148,7 @@
       if (m)
       {
         m.openPopup();
+        map.setZoom(13, {animate: false});
         map.panTo(m.getLatLng());
       }
     }
