fix sponsors logos blocked by ad blockers

--- a/prologin/prologin/static/css/prologin.css
+++ b/prologin/prologin/static/css/prologin.css
@@ -1266,13 +1266,13 @@ table.table-align-middle > tbody > tr > td {
  * Sponsors
  */
 
-.sponsor-logo {
+.partenaire-logo {
     display: block;
     width: 100%;
     text-align : center;
 }
 
-.sponsor-logo > img {
+.partenaire-logo > img {
     max-width: 100%;
     max-height: 10em;
 }
