--- a/prologin/sponsor/templates/sponsor/index.html
+++ b/prologin/sponsor/templates/sponsor/index.html
@@ -25,7 +25,7 @@
       {% if sponsor.rank_significance > 60%}
         <div class="row panel">
           <div class="col-sm-6 col-md-3">
-            <a class="sponsor-logo" href="{{ sponsor.site }}">
+            <a class="partenaire-logo" href="{{ sponsor.site }}">
               <img alt="{{ sponsor.name }}" src="{{ sponsor.logo.url }}" style="max-width:100%; max-height: 10em;" />
             </a>
           </div>
@@ -48,7 +48,7 @@
               </a>
           </div>
           <div class="panel-body">
-            <a class="sponsor-logo" href="{{ sponsor.site }}">
+            <a class="partenaire-logo" href="{{ sponsor.site }}">
               <img alt="{{ sponsor.name }}" src="{{ sponsor.logo.url }}" style="max-width:100%; max-height: 10em;" />
             </a>
           </div>
