--- a/prologin/sponsor/templates/sponsor/index.html
+++ b/prologin/sponsor/templates/sponsor/index.html
@@ -20,33 +20,32 @@
       {% endblocktrans %}
     </p>
 
-    <div class="row row-cols-4">
-    {% for sponsor in sponsors %}
-      {% if sponsor.rank_significance > 60%}
-        <div class="row panel">
-          <div class="col-sm-6 col-md-3">
-            <a class="partenaire-logo" href="{{ sponsor.site }}">
-              <img alt="{{ sponsor.name }}" src="{{ sponsor.logo.url }}" style="max-width:100%; max-height: 10em;" />
-            </a>
-          </div>
-          <div class="col-sm-6 col-md-9">
-            <p>
-             <a href="{{ sponsor.site }}" class="btn btn-default sponsor-flair staff-flair-president">
-                <strong>{{ sponsor.name }}</strong>
-              </a>
-            </p>
-            <p>{{ sponsor.description }}</p>
-          </div>
+    <div class="row">
+    {% for sponsor in sponsors_gold %}
+      {% if forloop.first %}
+      <h2>{% trans "Gold" %}</h2>
+      {% endif %}
+      <div class="row panel">
+        <div class="col-sm-6 col-md-3">
+          <a class="partenaire-logo" href="{{ sponsor.site }}">
+            <img alt="{{ sponsor.name }}" src="{{ sponsor.logo.url }}" style="max-width:100%; max-height: 10em;" />
+          </a>
         </div>
-      {% elif sponsor.rank_significance <= 60%}
-      <div class="col-md-4" style="height: 100%">
+        <div class="col-sm-6 col-md-9">
+          <p><strong>{{ sponsor.name }}</strong></p>
+          <p>{{ sponsor.description }}</p>
+        </div>
+      </div>
+    {% endfor %}
+    </div>
+
+    <div class="row row-cols-4">
+    {% for sponsor in sponsors_silver %}
+      {% if forloop.first %}
+      <h2>{% trans "Silver" %}</h2>
+      {% endif %}
+      <div class="col-md-4">
         <div class="panel panel-default">
-          <div class="panel-heading" style="margin: auto; text-align: center;">
-              <a href="{{ sponsor.site }}"
-                class="btn btn-default sponsor-flair sponsor-flair-{{ sponsor.rank_name }}">
-                <strong>{{ sponsor.name }}</strong>
-              </a>
-          </div>
           <div class="panel-body">
             <a class="partenaire-logo" href="{{ sponsor.site }}">
               <img alt="{{ sponsor.name }}" src="{{ sponsor.logo.url }}" style="max-width:100%; max-height: 10em;" />
@@ -54,7 +53,23 @@
           </div>
         </div>
       </div>
+    {% endfor %}
+    </div>
+
+    <div class="row row-cols-4">
+    {% for sponsor in sponsors_bronze %}
+      {% if forloop.first %}
+      <h2>{% trans "Bronze" %}</h2>
       {% endif %}
+      <div class="col-md-4">
+        <div class="panel panel-default">
+          <div class="panel-body">
+            <a class="partenaire-logo" href="{{ sponsor.site }}">
+              <img alt="{{ sponsor.name }}" src="{{ sponsor.logo.url }}" style="max-width:100%; max-height: 10em;" />
+            </a>
+          </div>
+        </div>
+      </div>
     {% endfor %}
     </div>
 
