--- a/prologin/sponsor/templates/sponsor/index.html
+++ b/prologin/sponsor/templates/sponsor/index.html
@@ -20,57 +20,64 @@
       {% endblocktrans %}
     </p>
 
-    <div class="row">
     {% for sponsor in sponsors_gold %}
       {% if forloop.first %}
       <h2>{% trans "Gold" %}</h2>
+      <div class="row">
       {% endif %}
-      <div class="row panel">
-        <div class="col-sm-6 col-md-3">
-          <a class="partenaire-logo" href="{{ sponsor.site }}">
-            <img alt="{{ sponsor.name }}" src="{{ sponsor.logo.url }}" style="max-width:100%; max-height: 10em;" />
-          </a>
+        <div class="row panel">
+          <div class="col-sm-6 col-md-3">
+            <a class="partenaire-logo" href="{{ sponsor.site }}">
+              <img alt="{{ sponsor.name }}" src="{{ sponsor.logo.url }}" style="max-width:100%; max-height: 10em;" />
+            </a>
+          </div>
+          <div class="col-sm-6 col-md-9">
+            <p><strong>{{ sponsor.name }}</strong></p>
+            <p>{{ sponsor.description }}</p>
+          </div>
         </div>
-        <div class="col-sm-6 col-md-9">
-          <p><strong>{{ sponsor.name }}</strong></p>
-          <p>{{ sponsor.description }}</p>
-        </div>
+      {% if forloop.last %}
       </div>
+      {% endif %}
     {% endfor %}
-    </div>
 
-    <div class="row row-cols-4">
+
     {% for sponsor in sponsors_silver %}
       {% if forloop.first %}
       <h2>{% trans "Silver" %}</h2>
+      <div class="row equal">
       {% endif %}
-      <div class="col-md-4">
-        <div class="panel panel-default">
-          <div class="panel-body">
-            <a class="partenaire-logo" href="{{ sponsor.site }}">
-              <img alt="{{ sponsor.name }}" src="{{ sponsor.logo.url }}" style="max-width:100%; max-height: 10em;" />
-            </a>
+        <div class="col-md-4">
+          <div class="panel">
+            <div class="panel-body">
+              <a class="partenaire-logo" href="{{ sponsor.site }}">
+                <img alt="{{ sponsor.name }}" src="{{ sponsor.logo.url }}" style="max-width:100%; max-height: 10em;" />
+              </a>
+            </div>
           </div>
         </div>
+      {% if forloop.last %}
       </div>
+      {% endif %}
     {% endfor %}
-    </div>
 
-    <div class="row row-cols-4">
     {% for sponsor in sponsors_bronze %}
       {% if forloop.first %}
       <h2>{% trans "Bronze" %}</h2>
+      <div class="row equal">
       {% endif %}
-      <div class="col-md-4">
-        <div class="panel panel-default">
-          <div class="panel-body">
-            <a class="partenaire-logo" href="{{ sponsor.site }}">
-              <img alt="{{ sponsor.name }}" src="{{ sponsor.logo.url }}" style="max-width:100%; max-height: 10em;" />
-            </a>
+        <div class="col-md-4">
+          <div class="panel">
+            <div class="panel-body">
+              <a class="partenaire-logo" href="{{ sponsor.site }}">
+                <img alt="{{ sponsor.name }}" src="{{ sponsor.logo.url }}" style="max-width:100%; max-height: 10em;" />
+              </a>
+            </div>
           </div>
         </div>
+      {% if forloop.last %}
       </div>
+      {% endif %}
     {% endfor %}
-    </div>
 
 {% endblock %}
