--- a/prologin/sponsor/templates/sponsor/index.html
+++ b/prologin/sponsor/templates/sponsor/index.html
@@ -38,7 +38,7 @@
       {% endif %}
         <div class="row panel">
           <div class="col-sm-6 col-md-3">
-            <a class="partenaire-logo" href="{{ sponsor.site }}">
+            <a class="spons-logo" href="{{ sponsor.site }}">
               <img alt="{{ sponsor.name }}" src="{{ sponsor.logo.url }}" style="max-width:100%; max-height: 10em;" />
             </a>
           </div>
@@ -61,7 +61,7 @@
         <div class="col-md-4">
           <div class="panel">
             <div class="panel-body">
-              <a class="partenaire-logo" href="{{ sponsor.site }}">
+              <a class="spons-logo" href="{{ sponsor.site }}">
                 <img alt="{{ sponsor.name }}" src="{{ sponsor.logo.url }}" style="max-width:100%; max-height: 10em;" />
               </a>
             </div>
@@ -80,7 +80,7 @@
         <div class="col-md-4">
           <div class="panel">
             <div class="panel-body">
-              <a class="partenaire-logo" href="{{ sponsor.site }}">
+              <a class="spons-logo" href="{{ sponsor.site }}">
                 <img alt="{{ sponsor.name }}" src="{{ sponsor.logo.url }}" style="max-width:100%; max-height: 10em;" />
               </a>
             </div>
