--- a/prologin/forum/static/css/forum.css
+++ b/prologin/forum/static/css/forum.css
@@ -46,6 +46,10 @@
   border-left: 5px solid #ccc;
 }
 
+.post-content img {
+  max-width: 100%;
+}
+
 .empty-list-item {
   background: #f5f5f6;
   padding: 1em;
