--- a/prologin/users/templates/users/edit.html
+++ b/prologin/users/templates/users/edit.html
@@ -22,7 +22,13 @@
 <form method="post" enctype="multipart/form-data">
   {% csrf_token %}
   {% crispy form %}
+  <small>Je consens au traitement de mes données personnelles ci-dessus par Prologin.</small> 
   <button class="btn btn-primary btn-block" type="submit"><i class="fa fa-save"></i> {% trans "Save" %}</button>
+    <p class="help-block ">
+      Prologin est organisés par l'association Prologin, qui agit en tant que contrôleur de données. Les réponses collectées dans ce formulaire nous permettent de fournir les services (communication et juge en ligne) et préparer le concours : sélections, restrictions alimentaires, etc...
+Pour en apprendre plus à propos de notre gestion des données et de vos droits, consultez 
+      <a href="{% url 'pages:about-privacy-policy' %}">notre page dédiée.</a>
+    </p>
 </form>
 
 {% endblock %}
