--- a/prologin/users/templates/users/register.html
+++ b/prologin/users/templates/users/register.html
@@ -19,9 +19,19 @@
   {% csrf_token %}
   {{ form|bootstrap_horizontal }}
   <div class="form-group">
+    <small class="col-sm-offset-2 col-sm-10">Je consens au traitement de mes données personnelles ci-dessus par Prologin.</small> 
+  </div>
+  <div class="form-group">
     <div class="col-sm-offset-2 col-sm-10">
       <input class="btn btn-primary" type="submit" value="{% trans "Register" %}">
     </div>
+  </div>
+  <div class="form-group">
+    <p class="help-block col-sm-offset-2 col-sm-10">
+      Prologin est organisés par l'association Prologin, qui agit en tant que contrôleur de données. Les réponses collectées dans ce formulaire nous permettent de fournir les services (communication et juge en ligne) et préparer le concours : sélections, restrictions alimentaires, etc...
+Pour en apprendre plus à propos de notre gestion des données et de vos droits, consultez 
+<a href="{% url 'pages:about-privacy-policy' %}">notre page dédiée.</a>
+    </p>
   </div>
 </form>
 
