gdpr: update privacy page with mail link
Co-Authored-By: O-Xian <amar.cyril@gmail.com>

--- a/prologin/pages/templates/pages/about-privacy-policy.html
+++ b/prologin/pages/templates/pages/about-privacy-policy.html
@@ -87,7 +87,7 @@
             manifestement insuffisant (évaluation par le juge en ligne Prologin)
             sont automatiquement écartées. Bien que cette décision automatique
             ne produise ni effet juridique ni impact significatif, Prologin peut
-            être contacté directement </p>
+            être <a href="mailto:info@prologin.org">contacté directement</a> pour demander une évaluation manuelle.  </p>
     </div>
 
     <button class="btn btn-default btn-block" type="button"
